Implemented first draft of visit(AcslValidPredicate) in SMGCPAValueVisitor